<resources>
    <string name="app_name">Renters</string>
    <string name="title_activity_sign_up_sign_in">SignUpSignInActivity</string>
    <string name="login">Log In</string>
    <string name="welcome_to_Renters">Welcome to Renters.</string>
    <string name="create_account">Create Account</string>
    <string name="agree_terms_privacy_policy">By tapping Login or Create Account, I agree to Renters Terms and Conditions and Privacy Policy.</string>
    <string name="forgot_pw">Forgot Password?</string>
    <string name="email_address">EMAIL ADDRESS</string>
    <string name="password">PASSWORD</string>
    <string name="login_header">Log In</string>
    <string name="forgot_your_pw">Forgot your password ?</string>
    <string name="forgot_pw_desc">Enter the email address associated with your account, and we\'ll email you a link to reset your password.</string>
    <string name="send_reset_link">Send reset link</string>
    <string name="what_your_name">What\'s your name?</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="create_password">Create a password</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="confirm_password_small">Confirm Password</string>
    <string name="create_pw_desc">Your password must be 6 or more characters long. Do not use any common passwords, repetition or sequences. Try making it longer or adding symbols , like !,#, or %.</string>
    <string name="your_email">And, your email?</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="explore">explore</string>
    <string name="menu_explore">EXPLORE</string>
    <string name="menu_saved">SAVED</string>
    <string name="menu_bookings">BOOKINGS</string>
    <string name="menu_inbox">INBOX</string>
    <string name="menu_profile">PROFILE</string>
    <string name="demo_min_label">Min</string>
    <string name="demo_max_label">Max</string>
    <string name="search_hint">Where do you want to Pop Up?</string>
    <string name="dates">Dates</string>
    <string name="space_size">Space Size</string>
    <string name="more_filters">More Filters</string>
    <string name="space_types">Space Types</string>
    <string name="space_types_desc">We have the Spaces \n that fit your Project</string>
    <string name="save">Save</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="default_calendar">Default calendar</string>
    <string name="open_calendar_dialog">Open calendar dialog</string>
    <string name="change_attributes_programmatically">Change attributes programmatically</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="single">Single</string>
    <string name="multiple">Multiple</string>
    <string name="range">Range</string>
    <string name="none">None</string>
    <string name="reset">Reset</string>
    <string name="reset_all">Reset all</string>
    <string name="instant_book">Instant Book</string>
    <string name="instant_book_desc">Book without waiting for the host to respond.</string>
    <string name="daily_price">Daily Price</string>
    <string name="space_type">Space Type</string>
    <string name="amenities">Amenities</string>
    <string name="floor_access">Floor/Access</string>
    <string name="login_with_google">Login With Google</string>
    <string name="where_to">Where to?</string>
    <string name="near_by">Nearby</string>
    <string name="anywhere">Any Where</string>
    <string name="popular_near_you">Popular near you</string>
    <string name="entire_space">ENTIRE SPACE</string>
    <string name="about_space">About this Space</string>
    <string name="sample_text">Lorem ipsum is a sample text in typing  industry.Lorem ipsum is a sample text in typing  industry.</string>
    <string name="the_space">The Space</string>
    <string name="review">Review</string>
    <string name="reviews">Reviews</string>
    <string name="space_rules">Space rules</string>
    <string name="read">Read</string>
    <string name="cancellation_policy">Cancellation policy</string>
    <string name="availability">Availability</string>
    <string name="view">View</string>
    <string name="contact_host">Contact host</string>
    <string name="message">Message</string>
    <string name="similar_listing">Similar Listings</string>
    <string name="request_more_info">Request more Information</string>
    <string name="spoken_language">Spoken Languages</string>
    <string name="see_all_reviews">See all reviews</string>
    <string name="verified">Verified</string>
    <string name="verified_info">Verified info</string>
    <string name="learn_more">Learn more</string>
    <string name="message_host">Message host</string>
    <string name="edit">Edit</string>
    <string name="say_hello">Say hello to your host</string>
    <string name="send_message">Send Message</string>
    <string name="step_one_of_four">Step 1 of 4</string>
    <string name="check_out">Check-out</string>
    <string name="check_in">Check-in</string>
    <string name="service_fee">Service fee :</string>
    <string name="total_price_desc">The quoted fee included any applicable \n exchange rate</string>
    <string name="type_message">Type your message here.</string>
    <string name="skip">Skip</string>
    <string name="step_two_of_four">Step 2 of 4</string>
    <string name="confirm_your_phone_number">Confirm your phone number</string>
    <string name="phone_number_desc">This is so your host can contact you during  your booking, and Renters knows how to reach you.</string>
    <string name="phone">Phone</string>
    <string name="phone_number">Phone Number</string>
    <string name="select_country">Select the country for your number</string>
    <string name="next">Next</string>
    <string name="get_help">Get Help</string>
    <string name="enter_6digit_code">Enter 6-digit code</string>
    <string name="six_digit_code">6 - DIGIT CODE</string>
    <string name="step_three_of_four">Step 3 of 4</string>
    <string name="tell_host">Tell your host about your plan </string>
    <string name="tell_host_desc">Help your host prepare for your space  by answering their questions.</string>
    <string name="see_pricing_details">See pricing details</string>
    <string name="payment_breakdown">Payment breakdown</string>
    <string name="service_fee_desc">This helps us run our platform and offers services like 24/7 support on your trip.</string>
    <string name="add_payment">Add payment</string>
    <string name="review_and_pay">Review and pay</string>
    <string name="step_four_of_four">Step 4 of 4</string>
    <string name="add_coupon">Add coupon</string>
    <string name="total_price">Total(USD)</string>
    <string name="cancellation_policy_colan">Cancellation Policy :</string>
    <string name="make_payment">Make Payment</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="select_payment">Select your payment method</string>
    <string name="credit_card">Credit Card</string>
    <string name="paypal">Paypal</string>
    <string name="stripe">Stripe</string>
    <string name="change_number">Change my number</string>
    <string name="send_code_again">Send the code again</string>
    <string name="filters">FILTERS</string>
    <string name="your_message">Your message</string>
    <string name="write_your_msg">Write your message here..</string>
    <string name="check">Check</string>
    <string name="view_edit_profile"><u>View and edit profile</u></string>
    <string name="profile_desc">We ask everyone for a few details before booking or hosting, so get a head start by doing it now.</string>
    <string name="switch_to_host">Switch to Hosting</string>
    <string name="settings">Settings</string>
    <string name="payout_preferences">Payout Preference</string>
    <string name="give_us_feedback">Give us feedback</string>
    <string name="title_activity_hosting">HostingActivity</string>
    <string name="menu_reservations">RESERVATIONS</string>
    <string name="menu_listings">LISTINGS</string>
    <string name="menu_stats">STATS</string>
    <string name="set_the_scene">Set the scene</string>
    <string name="set_scene_item">Space Type, Title, Price, Calendar</string>
    <string name="txt_continue">Continue</string>
    <string name="space_look_ups">Space look ups</string>
    <string name="space_look_ups_item">Photos, Short Description, Location</string>
    <string name="get_ready_guest">Get ready for guests</string>
    <string name="guests_item">Amenities, Booking settings</string>
    <string name="what_space">What kind of space are you listing?</string>
    <string name="what_type_space">What type of space is this ?</string>
    <string name="select">Select</string>
    <string name="size_qtn">Size ?</string>
    <string name="name_space">Name your space</string>
    <string name="space_name">Space name</string>
    <string name="max_50_char">Maximum 50 characters</string>
    <string name="add_photo">Add your photo</string>
    <string name="increase_chances_of_booked">Increase your chances of getting booked</string>
    <string name="currency">Currency</string>
    <string name="currency_desc">You\'re always in control of your night based price. You can change this later in settings.</string>
    <string name="base_price">Base price</string>
    <string name="back">Back</string>
    <string name="base_price_desc">This will be your default daily price.</string>
    <string name="photo_space">Show travellers what your space looks like</string>
    <string name="add_a_photo">Add a photo</string>
    <string name="add_a_photo_desc">Or two! Or three or more! Guests love photos that highlight the features of your space.</string>
    <string name="no_img_available">No image available</string>
    <string name="step_one">Step 1</string>
    <string name="edit_desc">Edit your description</string>
    <string name="summary">Summary</string>
    <string name="space_desc_hint">Describe the decor, light, what\'s nearby etc..</string>
    <string name="add_more">Add more</string>
    <string name="add_more_desc">Only 30% of hosts add more info here</string>
    <string name="where_place_located">Where\'s your place located ?</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="which_type_id">Which type of ID would you like to add ?</string>
    <string name="need_an_government_id">It needs to be an official government ID</string>
    <string name="issuing_country">Issuing Country</string>
    <string name="types_of_ID">Types of ID</string>
    <string name="driver_license">Driver\'s License</string>
    <string name="passport">Passport</string>
    <string name="identity_card">Identity Card</string>
    <string name="id_never_shared_with_host">Your  ID will never be shared with a host.</string>
    <string name="success">Success</string>
    <string name="ok">Ok</string>
    <string name="pre_approve_title">Invite user to book by pre-approving this trip</string>
    <string name="pre_approve_calendar">Your calendar is still open until the guest books</string>
    <string name="add_personal_msg">Add a personal message here...</string>
    <string name="pre_approve">Pre Approve</string>
    <string name="decline">Decline</string>
    <string name="transactions_caps">TRANSACTIONS</string>
    <string name="account_name">Account name</string>
    <string name="account_number">Account number</string>
    <string name="name">name</string>
    <string name="number">number</string>
    <string name="bank_name">Bank name</string>
    <string name="bank">Bank</string>
</resources>