<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_explore"
        />

    <item
        android:id="@+id/navigation_saved"
        android:icon="@drawable/ic_saved"
        android:title="@string/menu_saved" />

    <item
        android:id="@+id/navigation_bookings"
        android:icon="@drawable/ic_bookings"
        android:title="@string/menu_bookings" />
    <item
        android:id="@+id/navigation_inbox"
        android:icon="@drawable/ic_inbox"
        android:title="@string/menu_inbox" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_menu"
        android:title="@string/menu_profile" />
</menu>
