<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.ui.verification.IDVerificationActivity">
    <include
        android:id="@+id/headerLayout"
        layout="@layout/header_layout" />
    <com.rent.renters.mylibrary.widgets.CustomTextViewBold
        android:id="@+id/tvIDTitle"
        android:textColor="@color/text_black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/headerLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/which_type_id"
        android:textSize="@dimen/large_text_size"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0"
        android:layout_margin="@dimen/default_medium_margin"
        />
    <com.rent.renters.mylibrary.widgets.CustomTextView
        android:id="@+id/tvGovernmentID"
        android:textColor="@color/text_black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/need_an_government_id"
        android:textSize="@dimen/medium_text_size"
        android:layout_margin="@dimen/default_medium_margin"
        app:layout_constraintTop_toBottomOf="@+id/tvIDTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0"/>
    <com.rent.renters.mylibrary.widgets.CustomTextView
        android:id="@+id/tvIssuingCountry"
        android:textColor="@color/text_black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/issuing_country"
        android:textSize="@dimen/medium_text_size"
        android:layout_margin="@dimen/default_medium_margin"
        app:layout_constraintTop_toBottomOf="@+id/tvGovernmentID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0"/>


    <com.hbb20.CountryCodePicker
        android:id="@+id/ccpCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_medium_margin"
        app:layout_constraintTop_toBottomOf="@+id/tvIssuingCountry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:ccp_showFullName="true"
        app:ccp_showPhoneCode="false"
        app:ccp_showArrow="true"
        app:ccp_showNameCode="false"
        android:background="@drawable/border_edittext"
        app:layout_constraintVertical_bias="0.0"/>
    <com.rent.renters.mylibrary.widgets.CustomTextView
        android:id="@+id/tvTypeOfID"
        android:textColor="@color/text_black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/types_of_ID"
        android:textSize="@dimen/medium_text_size"
        android:layout_margin="@dimen/default_medium_margin"
        app:layout_constraintTop_toBottomOf="@+id/ccpCountry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0"/>
    <RadioGroup
        android:id="@+id/rgTypesOfID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_medium_margin"
        app:layout_constraintTop_toBottomOf="@+id/tvTypeOfID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0">
        <RadioButton
            android:textColor="@color/text_black"
            android:id="@+id/rbDriverLicense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/driver_license"
            android:textSize="@dimen/medium_text_size"/>
        <RadioButton
            android:id="@+id/rbPassport"
            android:textColor="@color/text_black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passport"
            android:layout_marginTop="@dimen/default_medium_margin"
            android:textSize="@dimen/medium_text_size"/>
        <RadioButton
            android:id="@+id/rbIdentityCard"
            android:textColor="@color/text_black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_medium_margin"
            android:text="@string/identity_card"
            android:textSize="@dimen/medium_text_size"
            />
    </RadioGroup>
    <com.rent.renters.mylibrary.widgets.CustomTextView
        android:id="@+id/tvSecurity"
        android:textColor="@color/text_black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_security"
        android:drawablePadding="@dimen/drawable_padding"
        android:text="@string/id_never_shared_with_host"
        android:textSize="@dimen/medium_text_size"
        android:layout_margin="@dimen/default_medium_margin"
        app:layout_constraintTop_toBottomOf="@+id/rgTypesOfID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0"/>

    <com.rent.renters.mylibrary.widgets.CustomButton
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_curve_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:drawableEnd="@drawable/ic_next_arrow_white"
        android:layout_margin="@dimen/default_medium_margin"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/text_white"
        android:paddingStart="@dimen/drawable_padding"
        android:paddingEnd="@dimen/drawable_padding"
        />

</androidx.constraintlayout.widget.ConstraintLayout>