<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".app.ui.settings.PayoutPreferenceActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <include
        layout="@layout/header_layout"
        android:id="@+id/headerLayout"/>
    <com.rent.renters.mylibrary.widgets.CustomTextView
        android:id="@+id/tvAccountName"
        android:textColor="@color/text_black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_medium_margin"
        android:background="@null"
        android:padding="@dimen/text_view_padding"
        android:text="@string/account_name"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerLayout"
        app:layout_constraintVertical_bias="0.0" />

    <com.rent.renters.mylibrary.widgets.CustomEdittext
        android:id="@+id/etAccountName"
        android:textColor="@color/text_black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_medium_margin"
        android:layout_marginEnd="@dimen/default_medium_margin"
        android:hint="@string/name"
        android:singleLine="true"
        android:inputType="textNoSuggestions"
        android:maxLength="50"
        android:background="@drawable/border_edittext"
        android:padding="@dimen/text_view_padding"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAccountName"
        app:layout_constraintVertical_bias="0.0"
        />

    <com.rent.renters.mylibrary.widgets.CustomTextView
        android:id="@+id/tvAccountNumber"
        android:textColor="@color/text_black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_medium_margin"
        android:background="@null"
        android:padding="@dimen/text_view_padding"
        android:text="@string/account_number"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAccountName"
        app:layout_constraintVertical_bias="0.0" />

    <com.rent.renters.mylibrary.widgets.CustomEdittext
        android:id="@+id/etAccountNumber"
        android:textColor="@color/text_black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLength="20"
        android:singleLine="true"
        android:hint="@string/number"
        android:layout_marginStart="@dimen/default_medium_margin"
        android:layout_marginEnd="@dimen/default_medium_margin"
        android:background="@drawable/border_edittext"
        android:padding="@dimen/text_view_padding"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAccountNumber"
        app:layout_constraintVertical_bias="0.0" />
    <com.rent.renters.mylibrary.widgets.CustomTextView
        android:id="@+id/tvPayBank"
        android:textColor="@color/text_black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_medium_margin"
        android:background="@null"
        android:padding="@dimen/text_view_padding"
        android:text="@string/bank_name"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAccountNumber"
        app:layout_constraintVertical_bias="0.0" />

    <com.rent.renters.mylibrary.widgets.CustomEdittext
        android:id="@+id/etPayBank"
        android:textColor="@color/text_black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bank"
        android:singleLine="true"
        android:maxLength="50"
        android:layout_marginStart="@dimen/default_medium_margin"
        android:layout_marginEnd="@dimen/default_medium_margin"
        android:background="@drawable/border_edittext"
        android:padding="@dimen/text_view_padding"
        android:inputType="textMultiLine|textNoSuggestions"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPayBank"
        app:layout_constraintVertical_bias="0.0"
        />
    <LinearLayout
        android:id="@+id/llBottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/white">

        <com.rent.renters.mylibrary.widgets.CustomButton
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_medium_margin"
            android:background="@drawable/rectangle_curve_button"
            android:gravity="center"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>