<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <ImageButton
        android:id="@+id/ivClose"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@null"
        app:srcCompat="@drawable/ic_close"
        android:layout_margin="@dimen/default_medium_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="0.0"
        />
    <com.rent.renters.mylibrary.widgets.CustomTextViewBold
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pre_approve_title"
        android:textSize="@dimen/large_text_size"
        android:textColor="@color/text_black"
        android:layout_gravity="center"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivClose"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0"/>
    <com.rent.renters.mylibrary.widgets.CustomTextViewLight
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pre_approve_calendar"
        android:textSize="@dimen/medium_text_size"
        android:textColor="@color/text_black"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="@dimen/default_medium_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0"/>
    <com.rent.renters.mylibrary.widgets.CustomEdittext
        android:id="@+id/etMessage"
        android:background="@drawable/border_edittext"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:textSize="@dimen/medium_text_size"
        android:textColor="@color/text_black"
        android:layout_gravity="center"
        android:gravity="start"
        android:hint="@string/add_personal_msg"
        android:padding="@dimen/text_view_padding"
        android:layout_margin="@dimen/default_medium_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0"/>

    <com.rent.renters.mylibrary.widgets.CustomButton
        android:id="@+id/btnApprove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_curve_button"
        android:text="@string/pre_approve"
        android:padding="@dimen/button_padding"
        android:textAllCaps="false"
        android:textColor="@color/text_white"
        android:layout_margin="@dimen/default_medium_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMessage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="1.0"/>
    <com.rent.renters.mylibrary.widgets.CustomButton
        android:id="@+id/btnDecline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_border_button"
        android:text="@string/decline"
        android:padding="@dimen/button_padding"
        android:textAllCaps="false"
        android:textColor="@color/text_app_color"
        android:layout_margin="@dimen/default_medium_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMessage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0"/>
</androidx.constraintlayout.widget.ConstraintLayout>

