<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <com.rent.renters.mylibrary.widgets.CustomTextViewBold
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/success"
        android:drawableEnd="@drawable/ic_check_circle"
        android:textSize="@dimen/large_text_size"
        android:textColor="@color/text_black"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="@dimen/default_medium_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0"/>
    <com.rent.renters.mylibrary.widgets.CustomTextViewLight
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pre_approve_calendar"
        android:textSize="@dimen/medium_text_size"
        android:textColor="@color/text_black"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="@dimen/default_medium_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0"/>



    <com.rent.renters.mylibrary.widgets.CustomButton
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_curve_button"
        android:text="@string/ok"
        android:padding="@dimen/button_padding"
        android:textAllCaps="false"
        android:textColor="@color/text_white"
        android:layout_margin="@dimen/default_medium_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0"
        />

</androidx.constraintlayout.widget.ConstraintLayout>

